--- a/templates/weather.html
+++ b/templates/weather.html
@@ -59,7 +59,7 @@
                 </button>
             </form>
             <div class="examples">
-                <p>Examples: Yellowknife, Dubai</p>
+                <p>Examples: Yellowknife, Rio De Janeiro</p>
             </div>
         </div>
         <div class="weather-info-table">
